--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,16 +11,20 @@
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/yup": "^0.29.3",
     "eslint-plugin-react": "^7.20.3",
     "formik": "^2.1.5",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-cookie-consent": "^5.1.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "test": "jest",
     "typescript": "^3.9.7",
+    "yup": "^0.29.1",
     "zustand": "^2.2.3"
   },
   "scripts": {
@@ -32,7 +37,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
   },
   "eslintConfig": {
@@ -61,10 +66,5 @@
     "jest": "^24.9.0",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.3"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
