--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-select": "^3.0.14",
     "@types/yup": "^0.29.3",
     "eslint-plugin-react": "^7.20.3",
     "formik": "^2.1.5",
@@ -21,6 +22,7 @@
     "react-icons": "^3.10.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.1",
     "test": "jest",
     "typescript": "^3.9.7",
