--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.8",
+    "@types/react-modal": "^3.10.6",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-select": "^3.0.14",
     "@types/yup": "^0.29.3",
+    "chart.js": "^2.9.3",
     "eslint-plugin-react": "^7.20.3",
     "formik": "^2.1.5",
     "react": "^16.13.1",
-    "react-animations": "^1.0.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-cookie-consent": "^5.1.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-modal": "^3.11.2",
+    "react-responsive": "^8.1.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
