--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@types/react-responsive": "^8.0.2",
     "@types/react-select": "^3.0.14",
     "@types/yup": "^0.29.3",
-    "chart.js": "^2.9.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint-plugin-react": "^7.20.3",
     "formik": "^2.1.5",
     "react": "^16.13.1",
-    "react-charts": "^2.0.0-beta.7",
     "react-cookie-consent": "^5.1.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
@@ -30,16 +30,14 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "styled-components": "^5.1.1",
-    "test": "jest",
     "typescript": "^3.9.7",
-    "yup": "^0.29.1",
-    "zustand": "^2.2.3"
+    "yup": "^0.29.1"
   },
   "scripts": {
     "commit": "git-cz",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage",
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "eject": "react-scripts eject"
   },
@@ -63,16 +61,25 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json"
+    ]
+  },
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "cz-conventional-changelog": "3.2.0",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^24.9.0",
     "prettier": "^2.0.5",
+    "raf": "^3.4.1",
     "ts-jest": "^26.1.3"
   }
 }
